src/objects/Estudios_de_titulos__c.object
<CustomObject>
    <fields>
        <fullName>Aprobado_por__c</fullName>
        <label>Aprobado por</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Natalia tangarife</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificado_de_Tradici_n_y_Libertad_May__c</fullName>
        <label>CTYL mayor extensión</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificado_existencia_y_representaci_n__c</fullName>
        <label>Certificado existencia y representación</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ciudad__c</fullName>
        <formula>Solicitud_de_credito__r.Ciudad_vivienda_usada__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ciudad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_deudor__c</fullName>
        <formula>Solicitud_de_credito__r.Cliente_deudor__r.FirstName&amp;&apos; &apos;&amp;Solicitud_de_credito__r.Cliente_deudor__r.MiddleName &amp;&apos; &apos;&amp; Solicitud_de_credito__r.Cliente_deudor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente deudor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeudor_1__c</fullName>
        <formula>Solicitud_de_credito__r.Codeudor_1__r.FirstName &amp;&apos; &apos;&amp; Solicitud_de_credito__r.Codeudor_1__r.MiddleName&amp;&apos; &apos;&amp; 
Solicitud_de_credito__r.Codeudor_1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codeudor 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeudor_2__c</fullName>
        <formula>Solicitud_de_credito__r.Codeudor_2__r.FirstName &amp;&apos; &apos;&amp;Solicitud_de_credito__r.Codeudor_2__r.MiddleName &amp;&apos; &apos;&amp; Solicitud_de_credito__r.Codeudor_2__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codeudor 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codeudor_3__c</fullName>
        <formula>Solicitud_de_credito__r.Codeudor_3__r.FirstName &amp;&apos; &apos;&amp;Solicitud_de_credito__r.Codeudor_3__r.MiddleName &amp;&apos; &apos;&amp; Solicitud_de_credito__r.Codeudor_3__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codeudor 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comprobante_de_pago_predial_2015__c</fullName>
        <label>Comprobante de pago predial 2015</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direcci_n_del_inmueble__c</fullName>
        <formula>Solicitud_de_credito__r.Direccion_del_inmueble__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección del inmueble</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escrituras_ltimos_20_a_os__c</fullName>
        <label>Escrituras últimos 20 años</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forma_de_saneamiento__c</fullName>
        <formula>Proyecto_1__r.Estudio_de_titularidad__r.Forma_de_saneamiento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forma de saneamiento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licencia_de_Construcci_n__c</fullName>
        <label>Licencia de Construcción</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limitaciones_al_dominio_o_grav_menes__c</fullName>
        <formula>Proyecto_1__r.Estudio_de_titularidad__r.Limitaciones_al_dominio_o_grav_menes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Limitaciones al dominio o gravámenes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monto__c</fullName>
        <formula>Solicitud_de_credito__r.Monto_prestamo_aprobado__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_mero_de_documento_codeudor_1__c</fullName>
        <formula>Solicitud_de_credito__r.Codeudor_1__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento codeudor 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_mero_de_documento_codeudor_2__c</fullName>
        <formula>Solicitud_de_credito__r.Codeudor_2__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento codeudor 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_mero_de_documento_codeudor_3__c</fullName>
        <formula>Solicitud_de_credito__r.Codeudor_3__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento codeudor 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numero_de_documento__c</fullName>
        <formula>Solicitud_de_credito__r.Cliente_deudor__r.Numero_de_documento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Número de documento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permiso_de_Ventas__c</fullName>
        <label>Permiso de Ventas</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plazo__c</fullName>
        <formula>Solicitud_de_credito__r.Plazo_credito__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plazo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promesa_de_Compraventa__c</fullName>
        <label>Promesa de Compraventa</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Propietario_Registrado__c</fullName>
        <formula>Proyecto_1__r.Estudio_de_titularidad__r.Propietario_Registrado__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propietario Registrado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proyecto_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proyecto</label>
        <referenceTo>Proyecto__c</referenceTo>
        <relationshipLabel>Estudios de titulos</relationshipLabel>
        <relationshipName>Estudios_de_titulos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proyecto__c</fullName>
        <formula>Solicitud_de_credito__r.Proyecto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proyecto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realizado_por__c</fullName>
        <label>Realizado por</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andreina</fullName>
                </value>
                <value>
                    <fullName>Oscar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reglamento_de_Propiedad_Horizontal__c</fullName>
        <label>Reglamento de Propiedad Horizontal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sistema_de_amortizacion__c</fullName>
        <formula>Solicitud_de_credito__r.Sistema_amortizacion_aprobado__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sistema de amortización</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicitud_de_credito__c</fullName>
        <label>Solicitud de crédito</label>
        <referenceTo>Solicitud_de_credito__c</referenceTo>
        <relationshipLabel>Estudios de titulos</relationshipLabel>
        <relationshipName>Estudios_de_titulos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Valor_del_avaluo__c</fullName>
        <formula>Solicitud_de_credito__r.Valor_del_aval_o__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor del avalúo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <recordTypes>
        <fullName>Vivienda_Nueva</fullName>
        <active>true</active>
        <label>Vivienda Nueva</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vivienda_Usada_Mejoramiento</fullName>
        <active>true</active>
        <label>Vivienda Usada / Mejoramiento</label>
    </recordTypes>
</CustomObject>